--- a/scss/style.css
+++ b/scss/style.css
@@ -17,6 +17,11 @@ ul {
   list-style: none;
 }
 
+button {
+  padding: 0;
+  border: none;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 20px;
@@ -51,6 +56,19 @@ body {
   font-weight: 400;
   font-size: 15px;
 }
+.menu__btn {
+  display: none;
+  width: 40px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.menu__btn span {
+  background-color: #000;
+  width: 100%;
+  height: 2px;
+}
+
 .user-actions {
   display: flex;
   align-items: center;
@@ -59,10 +77,11 @@ body {
 .user-actions__item-search {
   margin-left: 80px;
 }
+
 .top {
   background-image: url(../images/top-bg.jpg);
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: bottom left;
   background-size: cover;
 }
 .top__inner {
@@ -96,4 +115,100 @@ body {
   line-height: normal;
   max-width: 704px;
   margin: 150px auto;
+}
+
+@media (max-width: 1000px) {
+  .header__inner {
+    min-height: auto;
+  }
+  .menu {
+    margin-right: auto;
+  }
+  .menu__list {
+    margin-left: 60px;
+  }
+  .user-actions__item-search {
+    margin-left: 30px;
+  }
+  .logo {
+    margin-bottom: 0;
+  }
+  .blockquote__text {
+    margin-top: 120px;
+    margin-bottom: 135px;
+  }
+}
+@media (max-width: 860px) {
+  .menu {
+    order: -1;
+    margin-right: 0;
+  }
+  .menu__list {
+    display: none;
+  }
+  .menu__btn {
+    display: flex;
+  }
+  .logo {
+    margin-right: 154px;
+    margin-left: auto;
+  }
+}
+@media (max-width: 768px) {
+  .header__inner {
+    padding-right: 64px;
+    padding-left: 64px;
+  }
+  .blockquote__text {
+    max-width: 640px;
+  }
+}
+@media (max-width: 680px) {
+  .container {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .header__inner {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .top__title {
+    font-size: 40px;
+  }
+  .blockquote__text {
+    font-size: 16px;
+    max-width: 376px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 480px) {
+  .logo {
+    margin-right: 80px;
+  }
+  .logo img {
+    width: 40px;
+  }
+}
+@media (max-width: 360px) {
+  .logo {
+    margin-right: 50px;
+  }
+  .header__inner {
+    padding: 10px 0;
+  }
+  .user-actions__item-search {
+    margin-left: 0;
+  }
+  .top__inner {
+    min-height: 367px;
+  }
+  .top__title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .top__text {
+    font-size: 13px;
+    margin-bottom: 30px;
+  }
 }/*# sourceMappingURL=style.css.map */
