--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,10 @@ a {
 ul {
   list-style: none;
 }
+button {
+  padding: 0;
+  border: none;
+}
 body {
   font-family: 'Open Sans', sans-serif;
   //   font-family: "Cormorant", serif;
@@ -49,38 +53,39 @@ body {
     align-items: center;
     gap: 0 65px;
     margin-left: 85px;
-
     font-weight: 400;
     font-size: 15px;
   }
 
-  &__item {
-  }
+  &__btn {
+    display: none;
+    width: 40px;
+    height: 20px;
+    flex-direction: column;
+    justify-content: space-between;
 
-  &__link {
+    span {
+      background-color: #000;
+      width: 100%;
+      height: 2px;
+    }
   }
 }
 .user-actions {
   display: flex;
   align-items: center;
   gap: 0 20px;
-  &__item {
-  }
   &__item-search {
     margin-left: 80px;
-  }
-  &__link {
   }
 }
 
 // ==== MAIN ====
 
-.main {
-}
 .top {
   background-image: url(../images/top-bg.jpg);
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: bottom left;
   background-size: cover;
   &__inner {
     display: flex;
@@ -117,5 +122,128 @@ body {
     line-height: normal;
     max-width: 704px;
     margin: 150px auto;
+  }
+}
+
+// ==== ADAPTIVE ====
+
+@media (max-width: 1000px) {
+  .header {
+    &__inner {
+      min-height: auto;
+    }
+  }
+  .menu {
+    margin-right: auto;
+    &__list {
+      margin-left: 60px;
+    }
+  }
+  .user-actions {
+    &__item-search {
+      margin-left: 30px;
+    }
+  }
+  .logo {
+    margin-bottom: 0;
+  }
+  .blockquote {
+    &__text {
+      margin-top: 120px;
+      margin-bottom: 135px;
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .menu {
+    order: -1;
+    margin-right: 0;
+    &__list {
+      display: none;
+    }
+    &__btn {
+      display: flex;
+    }
+  }
+  .logo {
+    margin-right: 154px;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    &__inner {
+      padding-right: 64px;
+      padding-left: 64px;
+    }
+  }
+  .blockquote {
+    &__text {
+      max-width: 640px;
+    }
+  }
+}
+
+@media (max-width: 680px) {
+  .container {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .header {
+    &__inner {
+      padding-right: 0;
+      padding-left: 0;
+    }
+  }
+  .top {
+    &__title {
+      font-size: 40px;
+    }
+  }
+  .blockquote {
+    &__text {
+      font-size: 16px;
+      max-width: 376px;
+      margin-top: 60px;
+      margin-bottom: 60px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+    margin-right: 80px;
+    img {
+      width: 40px;
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .logo {
+    margin-right: 50px;
+  }
+  .header {
+    &__inner {
+      padding: 10px 0;
+    }
+  }
+  .user-actions__item-search {
+    margin-left: 0;
+  }
+  .top {
+    &__inner {
+      min-height: 367px;
+    }
+    &__title {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    &__text {
+      font-size: 13px;
+      margin-bottom: 30px;
+    }
   }
 }
